; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_network.c_ff_network_sleep_interruptible.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_network.c_ff_network_sleep_interruptible.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AVERROR_EXIT = common dso_local global i32 0, align 4
@ETIMEDOUT = common dso_local global i32 0, align 4
@POLLING_TIME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_network_sleep_interruptible(i64 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = call i64 (...) @av_gettime_relative()
  store i64 %8, i64* %6, align 8
  br label %9

9:                                                ; preds = %2, %26
  %10 = load i32*, i32** %5, align 8
  %11 = call i64 @ff_check_interrupt(i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = load i32, i32* @AVERROR_EXIT, align 4
  store i32 %14, i32* %3, align 4
  br label %32

15:                                               ; preds = %9
  %16 = load i64, i64* %4, align 8
  %17 = call i64 (...) @av_gettime_relative()
  %18 = load i64, i64* %6, align 8
  %19 = sub nsw i64 %17, %18
  %20 = sub nsw i64 %16, %19
  store i64 %20, i64* %7, align 8
  %21 = load i64, i64* %7, align 8
  %22 = icmp sle i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %15
  %24 = load i32, i32* @ETIMEDOUT, align 4
  %25 = call i32 @AVERROR(i32 %24)
  store i32 %25, i32* %3, align 4
  br label %32

26:                                               ; preds = %15
  %27 = load i64, i64* %7, align 8
  %28 = load i32, i32* @POLLING_TIME, align 4
  %29 = mul nsw i32 %28, 1000
  %30 = call i32 @FFMIN(i64 %27, i32 %29)
  %31 = call i32 @av_usleep(i32 %30)
  br label %9

32:                                               ; preds = %23, %13
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i64 @av_gettime_relative(...) #1

declare dso_local i64 @ff_check_interrupt(i32*) #1

declare dso_local i32 @AVERROR(i32) #1

declare dso_local i32 @av_usleep(i32) #1

declare dso_local i32 @FFMIN(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
